dev/non_executable_reasons_record_from_random_10k/5026.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
#--------------------------------------ä¸»æˆåˆ†åˆ†æ--------------------------------------------
###æ•°æ®æ ‡å‡†åŒ–
import pandas as pd
df_wine = pd.read_csv('http://archive.ics.uci.edu/ml/machine-learning-databases/wine//wine.data', header=None)ã€

------------------

[0;36m  File [0;32m"<ipython-input-1-bb559bb3d068>"[0;36m, line [0;32m6[0m
[0;31m    df_wine = pd.read_csv('http://archive.ics.uci.edu/ml/machine-learning-databases/wine//wine.data', header=None)ã€[0m
[0m                                                                                                                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid character in identifier

SyntaxError: invalid character in identifier (<ipython-input-1-bb559bb3d068>, line 6)

Executability                            : False
